Add support for a resource type list to the JobModel of dpc-queue. First, part of the DPC-183 which aims to add support for the resource type query parameter.
- Resource type lists are persisted as a comma delimited string
- Add a test for queue and retrival.
- dpc-api and dpc-aggregator currently ignore the resource list. The next set of pushes will fix this.